--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/aos/dist/aos.js"
+              "node_modules/aos/dist/aos.js",
+              "node_modules/highcharts/highcharts.js"
             ]
           },
           "configurations": {
