--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@coreui/utils": "^2.0.2",
     "angular-highcharts": "^16.0.0",
     "aos": "^2.3.4",
+    "apexcharts": "^3.46.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
-    "highcharts": "^11.2.0",
+    "highcharts": "^11.3.0",
     "highcharts-angular": "^4.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
