--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/aos/dist/aos.js",
-              "node_modules/highcharts/highcharts.js"
+              "node_modules/highcharts/highcharts.js",
+              "node_modules/apexcharts/dist/apexcharts.min.js"
             ]
           },
           "configurations": {
