--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "highcharts-angular": "^4.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "ng-apexcharts": "^1.9.0",
     "ngx-bootstrap": "^12.0.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
