--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ng-apexcharts": "^1.9.0",
     "ngx-bootstrap": "^12.0.0",
     "ngx-toastr": "^17.0.2",
+    "ngx-webcam": "^0.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
