--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ngx-toastr": "^17.0.2",
     "ngx-webcam": "^0.4.1",
     "rxjs": "~7.8.0",
+    "screenfull": "^6.0.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
